@@ -71,8 +71,7 @@ t/ack-show-types.t
 t/ack-s.t
 t/ack-type-del.t
 t/ack-type.t
-t/ack-u.t
-t/ack-u.barfly
+t/ack-underline.barfly
 t/ack-underline.t
 t/ack-v.t
 t/ack-version.t
